# datafollow

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  COMPARISON_REPORT.md  DECISION_XGBOOST_VS_LIGHTGBM.md  DEPLOY_INSTRUCTIONS.md  DROPLET_STEP_BY_STEP.md  Dockerfile.api  Dockerfile.dashboard  FIX_LIGHTGBM_PROMPT.md  GIT_PUSH_GUIDE.md  IMPROVEMENT_PLAN.md  MODELS_DOWNLOAD.md  MODEL_RMSE_TEST_REPORT.md  OVERVIEW.md  PROJECT_PLAN.md  README.md  deploy-server.sh  docker-compose.yml  pyproject.toml  requirements.txt  upload-to-server.ps1
.claude/: settings.local.json
.github/workflows/: deploy-aws.yml  deploy-digitalocean-app.yml  deploy-digitalocean-droplet.yml
.streamlit/: config.toml
DATA/: sample-README.md  simulations.db
DATA/processed/: feature_info.json
app/: cache.py  dashboard.py  dashboard_v2.py
app/components/: __init__.py  charts.py  future_prediction.py  historical.py  predictive.py  sidebar.py
app/db/: __init__.py  models.py  service.py
app/services/: __init__.py  data_loader.py  feature_service.py  model_service.py  recommendation_service.py  simulator_service.py
digitalocean/: app.yaml  deploy-app-platform.sh  deploy-droplet.ps1  deploy-droplet.sh  docker-compose.droplet.yml
models/: all_model_results.json  baseline_results.json  bytes_config.json  feature_names.json  feature_scaler.pkl  feature_scaler_nonlag.pkl  forecaster_feature_names.json  lgbm_5m.pkl  lgbm_bytes_5m.pkl  lgbm_forecaster.pkl  lgbm_hybrid_residual.pkl  optimal_scaling_config.json  prophet_5m.pkl  scaling_config.json
notebooks/: 01_data_ingestion.ipynb  02_aggregation.ipynb  03_feature_engineering.ipynb  04_eda.ipynb  05_feature_selection.ipynb  06_baseline_models.ipynb  07_ml_models.ipynb  08_scaling_policy.ipynb  09_cost_simulation.ipynb  10_policy_optimization.ipynb  11_final_benchmark.ipynb
reports/: benchmark_results.csv  benchmark_results.json
scripts/: run_pipeline.py  test_phase4.py
src/: __init__.py
src/api/: __init__.py  main.py
src/data/: __init__.py  aggregator.py  cleaner.py  parser.py
src/features/: __init__.py  advanced_features.py  anomaly_detector.py  lag_features.py  rolling_features.py  time_features.py
src/models/: __init__.py  lgbm_model.py  prophet_model.py  (+2 more)
tests/: __init__.py  conftest.py  test_aggregator.py  test_anomaly_detector.py  test_api.py  test_cleaner.py  test_dashboard.py  test_db_service.py  test_lgbm_model.py  test_parser.py  test_scaling.py
(+10 files in other folders)
